css/root.css
/*-- -------------------------- -->
<---        Core Styles         -->
<--- -------------------------- -*/

/* Mobile */
@media only screen and (min-width: 0em) {
  :root {
    --primary: #569fdecf;
    --primary-dark: #00539B;
    --bodyText: #1a1a1a;
    --blue-btn: #0074b7;
    --blue-btn-hover: #005194;
  }
  /* roboto-regular - latin */
  @font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    src: local(''), url('../fonts/roboto-v29-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('../fonts/roboto-v29-latin-regular.woff') format('woff');
    
    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
  }
  /* roboto-700 - latin */
  @font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 700;
    src: local(''), url('../fonts/roboto-v29-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('../fonts/roboto-v29-latin-700.woff') format('woff');
    
    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
  }
  /* roboto-900 - latin */
  @font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 900;
    src: local(''), url('../fonts/roboto-v29-latin-900.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('../fonts/roboto-v29-latin-900.woff') format('woff');
    
    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
  }
  body,
  html {
    margin: 0;
    padding: 0;
    font-size: 100%;
    font-family: 'Roboto', Arial, sans-serif;
    color: var(--bodyText);
    overflow: auto !important;
    -moz-text-size-adjust: none;
    -webkit-text-size-adjust: none;
            text-size-adjust: none;
  }
  *,
  *:before,
  *:after {
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
  }
  body {
    -webkit-transition: background-color 0.3s;
    transition: background-color 0.3s;
  }
  .container {
    position: relative;
    width: 90%;
    margin: auto;
  }
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    margin: 0;
    color: #1a1a1a;
  }
  p,
  li,
  a {
    font-size: 1.125rem;
    line-height: 1.5;
    margin: 0;
  }
  p,
  li {
    color: #575757;
  }
  a:hover,
  button:hover {
    cursor: pointer;
  }
  .button-solid {
    font-size: min(5vw, 1em);
    font-weight: bold;
    text-transform: uppercase;
    text-decoration: none;
    display: inline-block;
    width: auto;
    line-height: 3.57142857em;
    min-height: 3.57142857em;
    text-align: center;
    padding: 0 2.14285714em;
    border-radius: 6px;
    position: relative;
    z-index: 1;
    background-color: var(--blue-btn);
    color: white;
  }
  .button-solid:hover,
  .button-solid:focus {
    background-color: var(--blue-btn-hover);
  }
  .skip {
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0;
    z-index: -1111111;
  }
  img {
    -webkit-user-select: none; /* Safari, Chrome */
    -ms-user-select: none; /* IE 10+, Edge */
    -moz-user-select: none; /* Firefox */
    user-select: none;
  }
  .visually-hidden:not(:focus):not(:active) {
    clip: rect(0 0 0 0); 
    clip-path: inset(50%);
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap; 
    width: 1px;
  }
  section:not(:first-of-type) {
    margin-bottom: 8rem;
  }
  .title {
    font-size: min(10vw, 3em);
    padding: 5rem 6rem 1rem;
    text-align: center;
    font-weight: 700;
    margin: auto;
    margin-bottom: 4rem;
    width: max-content;
    color: #fff;
    background: -webkit-linear-gradient(to bottom, rgb(255, 255, 255), rgba(255,255,255, 0) 90%, rgba(255,255,255, 0) 90%, rgb(255, 255, 255)), 
                -webkit-linear-gradient(to bottom right, rgb(255, 255, 255), rgba(255,255,255, 0) 50%), 
                -webkit-linear-gradient(to bottom left, rgb(255, 255, 255), rgba(255,255,255, 0) 50%), 
                -webkit-linear-gradient(to right, rgba(255,255,255, 0), var(--primary-dark) 30%, var(--primary-dark) 70%, rgba(255,255,255, 0));
       background: -moz-linear-gradient(to bottom, rgb(255, 255, 255), rgba(255,255,255, 0) 90%, rgba(255,255,255, 0) 90%, rgb(255, 255, 255)), 
                   -moz-linear-gradient(to bottom right, rgb(255, 255, 255), rgba(255,255,255, 0) 50%), 
                   -moz-linear-gradient(to bottom left, rgb(255, 255, 255), rgba(255,255,255, 0) 50%), 
                   -moz-linear-gradient(to right, rgba(255,255,255, 0), var(--primary-dark) 30%, var(--primary-dark) 70%, rgba(255,255,255, 0));
            background: linear-gradient(to bottom, rgb(255, 255, 255), rgba(255,255,255, 0) 90%, rgba(255,255,255, 0) 90%, rgb(255, 255, 255)), 
                        linear-gradient(to bottom right, rgb(255, 255, 255), rgba(255,255,255, 0) 50%), 
                        linear-gradient(to bottom left, rgb(255, 255, 255), rgba(255,255,255, 0) 50%), 
                        linear-gradient(to right, rgba(255,255,255, 0), var(--primary-dark) 30%, var(--primary-dark) 70%, rgba(255,255,255, 0));
  }
  .italic {
    font-style: italic;
  }
}

/* Reset Margins */
@media only screen and (min-width: 1025px) {
  body,
  html {
    padding: 0;
    margin: 0;
    overflow-x: hidden;
  }
}

/* Scale full website with the viewport width at very large screen sizes */
@media only screen and (min-width: 1800px) {
  body,
  html {
    font-size: .85vw;
  }
}
/* ... */

